<resources>
    <string name="app_name" translatable="false">EnjoyFood</string>
    <string name="varClient">Client</string>
    <string name="varGerant">Manager</string>
    <string name="varNo">No</string>
    <string name="varYes">Yes</string>
    <string name="varReponseJson" translatable="false">response</string>
    <string name="varDbName" translatable="false">dbEnjoyFood</string>
    <string name="varMailAdmin" translatable="false">antoine-drouin@hotmail.fr</string>
    <string name="varPackageMaps" translatable="false">com.google.android.apps.maps</string>
    <string name="varLinkMaps" translatable="false">http://maps.google.com/maps?daddr=</string>
    <string name="varPdfManuel" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Documentation/ManuelUtilisateurEF.pdf</string>
    <string name="varNoteMax" translatable="false">/100</string>
    <string name="insertUtilisateur" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertUtilisateur.php</string>
    <string name="checkUtilisateur" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/checkUtilisateur.php</string>
    <string name="checkIdentifiants" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/checkIdentifiants.php</string>
    <string name="changeMdp" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/changePassword.php</string>
    <string name="eraseCompte" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/eraseCompte.php</string>
    <string name="changeCoordClient" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/changeCoordClient.php</string>
    <string name="getEtabById" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getEtabById.php</string>
    <string name="getEtabByManager" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getEtabByManager.php</string>
    <string name="updateEtab" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/updateEtab.php</string>
    <string name="insertEtab" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertEtab.php</string>
    <string name="getHoraires" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getHoraires.php</string>
    <string name="getHorairesInfos" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getHorairesInfos.php</string>
    <string name="updateHoraire" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/updateHoraire.php</string>
    <string name="insertHoraire" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertHoraire.php</string>
    <string name="getPaiements" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getPaiements.php</string>
    <string name="getPaiementsInfos" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getPaiementsInfos.php</string>
    <string name="updatePaiement" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/updatePaiement.php</string>
    <string name="insertPaiement" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertPaiement.php</string>
    <string name="getCategs" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getCategs.php</string>
    <string name="getCategInfos" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getCategInfos.php</string>
    <string name="updateCateg" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/updateCateg.php</string>
    <string name="insertCateg" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertCateg.php</string>
    <string name="getConsosInfos" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getConsosInfos.php</string>
    <string name="updateConso" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/updateConso.php</string>
    <string name="insertConso" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertConso.php</string>
    <string name="getMenu" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getMenu.php</string>
    <string name="deleteCateg" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/deleteCateg.php</string>
    <string name="deleteConso" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/deleteConso.php</string>
    <string name="deleteHoraire" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/deleteHoraire.php</string>
    <string name="deletePaiement" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/deletePaiement.php</string>
    <string name="getConso" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getConso.php</string>
    <string name="insertCommandeGetId" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertCommandeGetId.php</string>
    <string name="insertArticle" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertArticle.php</string>
    <string name="getCommandes" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getCommandes.php</string>
    <string name="getCommandeInfos" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getCommandeInfos.php</string>
    <string name="updateCommande" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/updateCommande.php</string>
    <string name="getArticles" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getArticles.php</string>
    <string name="insertNote" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/insertNote.php</string>
    <string name="getNotes" translatable="false">http://antoine-drouin.alwaysdata.net/EnjoyFood/Scripts/getNotes.php</string>
    <string name="read" translatable="false">Read</string>
    <string name="write" translatable="false">Write</string>
    <string name="insertUtilisateurSuccess">User created successfully</string>
    <string name="insertUtilisateurFail">This pseudonym is already used</string>
    <string name="connectionError">Connection error</string>
    <string name="connectionFail">No account found</string>
    <string name="connectionSuccess">Connection successful</string>
    <string name="disconnectionSuccess">Logout successful</string>
    <string name="eraseCompteMessage">Deleting the account is permanent. Do you really want to continue ?</string>
    <string name="eraseCompteSuccess">Deleting account successful</string>
    <string name="eraseCompteFail">Delete account canceled</string>
    <string name="changeMdpSuccess">Password changed</string>
    <string name="changeCoordSuccess">Contact information changed</string>
    <string name="geolocationFailed">Geolocation is unavailable. Would you like to turn it on ?</string>
    <string name="dataConnectionFailed">Data connection is unavailable. Would you like to turn it on ?</string>
    <string name="choosePlace">Choose your restaurant</string>
    <string name="placeUpdated">Your restaurant is now up to date</string>
    <string name="placeInserted">Restaurant created successfully</string>
    <string name="update">Update completed</string>
    <string name="infosMissing">Please fill all the fields</string>
    <string name="orderSend">Order send</string>
    <string name="orderUpdated">Order modified</string>
    <string name="noteSend">Mark send</string>
    <string name="errorPseudoLength">The pseudonym must be at least 3 characters long</string>
    <string name="errorMdpLength">The password must be at least 3 characters long</string>
    <string name="errorMdpNotSame">The passwords are different</string>
    <string name="errorMdpSame">The old and the new passwords are the same</string>
    <string name="errorOldMdp">The old password is incorrect</string>
    <string name="errorNom">Please enter a first name</string>
    <string name="errorPrenom">Please enter a last name</string>
    <string name="errorFields">Please fill all the fields</string>
    <string name="errorNoCateg">No categories found, add one to continue</string>
    <string name="prefId" translatable="false">idUt</string>
    <string name="prefPseudo" translatable="false">pseudo</string>
    <string name="prefMdp" translatable="false">mdp</string>
    <string name="prefNom" translatable="false">nom</string>
    <string name="prefPrenom" translatable="false">prenom</string>
    <string name="prefCompte" translatable="false">compte</string>
    <string name="prefVille" translatable="false">ville</string>
    <string name="prefCp" translatable="false">cp</string>
    <string name="prefTel" translatable="false">tel</string>
    <string name="prefAdresse" translatable="false">adresse</string>
    <string name="prefIdEt" translatable="false">idEt</string>
    <string name="prefNomEt" translatable="false">nomEt</string>
    <string name="prefDesc" translatable="false">description</string>
    <string name="prefPrixLivr" translatable="false">prixLivraison</string>
    <string name="prefConges" translatable="false">conges</string>
    <string name="prefIdHor" translatable="false">idHo</string>
    <string name="prefJour" translatable="false">jourHo</string>
    <string name="prefHeureDebut1" translatable="false">heureDebut1</string>
    <string name="prefHeureFin1" translatable="false">heureFin1</string>
    <string name="prefHeureDebut2" translatable="false">heureDebut2</string>
    <string name="prefHeureFin2" translatable="false">heureFin2</string>
    <string name="prefIdPa" translatable="false">idPa</string>
    <string name="prefNomPa" translatable="false">nomPa</string>
    <string name="prefIdCa" translatable="false">idCa</string>
    <string name="prefNomCa" translatable="false">nomCa</string>
    <string name="prefIdConso" translatable="false">idConso</string>
    <string name="prefNomConso" translatable="false">nomConso</string>
    <string name="prefDescriptionConso" translatable="false">descriptionConso</string>
    <string name="prefPrixConso" translatable="false">prixConso</string>
    <string name="prefIdCom" translatable="false">idCom</string>
    <string name="prefEtatCom" translatable="false">etatCom</string>
    <string name="btnValider">OK</string>
    <string name="btnCreerCompte">Register</string>
    <string name="btnChangeMdp">Change my password</string>
    <string name="btnSupprCompte">Delete my account</string>
    <string name="btnDeco">Log out</string>
    <string name="btnSearch">Search</string>
    <string name="btnConnexion">Connection</string>
    <string name="btnDoc">Download documentation</string>
    <string name="btnReport">Send report</string>
    <string name="btnAddNote">Add mark</string>
    <string name="txtSearchEtab">Search a restaurant</string>
    <string name="txtDescription">Description</string>
    <string name="edtPseudo">Pseudonym</string>
    <string name="edtMdp">Password</string>
    <string name="edtRepeatMdp">Repeat password</string>
    <string name="edtOldMdp">Old password</string>
    <string name="edtNewMdp">New password</string>
    <string name="edtNom">Last name</string>
    <string name="edtPrenom">First name</string>
    <string name="edtVille">City</string>
    <string name="edtTel">Phone number</string>
    <string name="edtAdresse">Address</string>
    <string name="edtEtablissement">Restaurant</string>
    <string name="edtCommande">Order</string>
    <string name="edtTitre">Title</string>
    <string name="edtRemarque">Remark</string>
    <string name="lvTotal">Total :</string>
</resources>