<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">

    <include layout="@layout/loading_panel"/>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:clickable="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitreTab"
        android:textAlignment="center"
        android:text="@string/txtSearchEtab" />

    <LinearLayout
        android:id="@+id/layoutVille"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edtSearchVille"
            android:hint="@string/edtVille"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_location"
            android:id="@+id/btnLocation"
            android:onClick="onClickLocation"
            android:background="@null"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSearchEtab"
        android:hint="@string/edtEtablissement" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSearchPanier"
        android:visibility="gone"
        android:hint="@string/edtEtablissement" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSearchCommande"
        android:hint="@string/edtCommande"
        android:visibility="gone" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSearch"
        android:id="@+id/btnSearch"
        android:onClick="onClickSearch"
        style="@style/buttonStyle"/>

    </LinearLayout>

</RelativeLayout>
