<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.antoinedrouin.enjoyfood.Compte">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout2"
                android:visibility="visible">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnChangeMdp"
                    android:id="@+id/btnChangeMdp"
                    android:onClick="onClickMdpChange" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/layoutMdp">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edtOldMdp"
                        android:hint="@string/edtOldMdp" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edtNewMdp1"
                        android:hint="@string/edtNewMdp" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edtNewMdp2"
                        android:hint="@string/edtRepeatMdp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnValider"
                        android:id="@+id/btnChangeMdpValider"
                        android:onClick="onClickMdpChangeValider"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_weight="0.09"
                android:gravity="bottom">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSupprCompte"
                    android:id="@+id/btnSupprCompte"
                    android:onClick="onClickSupprCompte" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnDeco"
                    android:id="@+id/btnDeco"
                    android:onClick="onClickDeco" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
