<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context=".Activities.Support">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView5" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnDoc"
                android:id="@+id/btnDoc"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_big_padding"
                android:onClick="onClickDoc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/btnReport"
                android:id="@+id/txtReport"
                android:layout_below="@+id/btnDoc"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_big_padding" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtTitre"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtReport"
                android:hint="@string/edtTitre" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edtDesc"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/edtTitre"
                android:hint="@string/txtDescription" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnValider"
                android:id="@+id/btnMail"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/edtDesc"
                android:onClick="onClickMail" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
