<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.antoinedrouin.enjoyfood.Login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtPseudoLogin"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/edtMdp"
        android:layout_alignParentStart="true"
        android:hint="@string/edtPseudo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtMdp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/edtMdp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnConnexion"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickLogin"
            android:visibility="invisible"
            android:text="@string/btnConnexion" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCreerCompte"
            android:id="@+id/btnRegister"
            android:onClick="onClickRegister" />

    </LinearLayout>

</RelativeLayout>
