<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.antoinedrouin.enjoyfood.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/txtCompte"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/lblTypeCompte"
                        android:gravity="center" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinCompte"
                        android:spinnerMode="dialog"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edtPseudo"
                        android:hint="@string/edtPseudo" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edtMdp1"
                        android:hint="@string/edtMdp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:hint="@string/edtRepeatMdp"
                        android:id="@+id/edtMdp2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edtNom"
                        android:layout_weight="1"
                        android:hint="@string/edtNom"
                        android:nextFocusDown="@+id/edtPrenom" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edtPrenom"
                        android:layout_weight="1"
                        android:hint="@string/edtPrenom"
                        android:focusable="true" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@android:dimen/notification_large_icon_height">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnRegister"
                    android:onClick="onClickCreation"
                    android:text="@string/btnValider" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
